# SOSandCE

./: Makefile  README.md  settings.json  sosandce
source/SOSandCE_CPP/: CMakeLists.txt
source/SOSandCE_CPP/include/core/: audio.h  engine.h  settings.h
source/SOSandCE_CPP/include/game/: ai.h  buildings.h  country.h  division.h  economy.h  game_state.h  helpers.h
source/SOSandCE_CPP/include/map/: map_functions.h  map_renderer.h
source/SOSandCE_CPP/include/screens/: game_screen.h  settings_screen.h
source/SOSandCE_CPP/include/sidebar/: sidebar.h
source/SOSandCE_CPP/src/core/: app.cpp  audio.cpp  engine.cpp
source/SOSandCE_CPP/src/game/: ai.cpp  buildings.cpp  country.cpp  division.cpp  economy.cpp  event_manager.cpp  game_state.cpp  helpers.cpp  pathfinding.cpp
source/SOSandCE_CPP/src/map/: map_functions.cpp  map_renderer.cpp
source/SOSandCE_CPP/src/save/: save_system.cpp
source/SOSandCE_CPP/src/screens/: country_select.cpp  decision_tree.cpp  game_screen.cpp  main_menu.cpp  map_select.cpp  peace_screen.cpp  save_load.cpp  settings_screen.cpp
source/SOSandCE_CPP/src/sidebar/: sidebar.cpp
source/SOSandCE_CPP/src/ui/: button.cpp  imgui_integration.cpp  popup.cpp  primitives.cpp  rmlui_backend.cpp  top_bar.cpp  ui_assets.cpp
